--- a/cjzs/android/app/src/main/res/values/strings.xml
+++ b/cjzs/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
         https://raw.githubusercontent.com/yapovich/reactnative/master/cjzs/android/app/package/update.json
     </string>
 
+    <integer-array name="material_colors">
+        <item>@color/material_red</item>
+        <item>@color/material_green</item>
+        <item>@color/material_blue</item>
+        <item>@color/material_yellow</item>
+    </integer-array>
+
 </resources>
